Flush process cache after fetching a CGroup's PIDs

The process cache turns a PID into a KSysguard::Process* to save lookups
in each data fetch.

Once we update the applications pids this needs resetting.

BUG: 435063